[gd_scene load_steps=7 format=3 uid="uid://bumxlqpthva14"]

[ext_resource type="Theme" uid="uid://j6l6bewon5v3" path="res://misc/main_theme.tres" id="1_cyn04"]
[ext_resource type="Script" uid="uid://bd8fsjt1cqifl" path="res://scripts/menu_toolbar.gd" id="2_go20a"]
[ext_resource type="Shader" uid="uid://cxku8ns7xacci" path="res://misc/flash.gdshader" id="3_7ougl"]
[ext_resource type="Texture2D" uid="uid://cdtq0uuciejo7" path="res://DialogueBuilder/asset/circle_filled.png" id="4_7v4is"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cyn04"]
bg_color = Color(0.00392157, 0.00784314, 0.00784314, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bt61f"]
shader = ExtResource("3_7ougl")
shader_parameter/on = true

[node name="MenuToolbar" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("1_cyn04")
script = ExtResource("2_go20a")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cyn04")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="save_icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_bt61f")
layout_mode = 2
texture = ExtResource("4_7v4is")
expand_mode = 3
stretch_mode = 4

[node name="MenuBar" type="MenuBar" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
flat = true
switch_on_hover = false

[node name="File" type="PopupMenu" parent="PanelContainer/MarginContainer/HBoxContainer/MenuBar"]
submenu_popup_delay = 0.1
allow_search = false
item_count = 6
item_0/text = "Load Script"
item_0/id = 1
item_1/text = "Save Script"
item_1/id = 2
item_2/text = "Save  Script as"
item_2/id = 3
item_3/text = "Close Script"
item_3/id = 5
item_4/id = 4
item_4/disabled = true
item_4/separator = true
item_5/text = "Exit"
item_5/id = 0

[node name="Node" type="PopupMenu" parent="PanelContainer/MarginContainer/HBoxContainer/MenuBar"]
auto_translate_mode = 1
item_count = 3
item_0/text = "Add Dialogue Node"
item_0/id = 0
item_1/text = "Add Choice Node"
item_1/id = 1
item_2/text = "Add Event Node"
item_2/id = 2

[node name="Info" type="PopupMenu" parent="PanelContainer/MarginContainer/HBoxContainer/MenuBar"]
item_count = 1
item_0/text = "Debug Connection"
item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AutoSaveLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "*AutoSaved"

[connection signal="id_pressed" from="PanelContainer/MarginContainer/HBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="PanelContainer/MarginContainer/HBoxContainer/MenuBar/Node" to="." method="_on_node_id_pressed"]
[connection signal="id_pressed" from="PanelContainer/MarginContainer/HBoxContainer/MenuBar/Info" to="." method="_on_info_id_pressed"]
